logs/validate.20260327-102129.log
error[E0308]: mismatched types
   --> src/Chap26/ETSPMtEph.rs:620:46
    |
618 |     pub trait ETSPPointTrait {
    |     ------------------------ found this type parameter
619 |         fn distance(&self, other: &Point) -> (d: f64)
620 |             ensures d == spec_point_distance(*self, *other);
    |                          ------------------- ^^^^^ expected `Point`, found type parameter `Self`
    |                          |
    |                          arguments to this function are incorrect
    |
    = note:      expected struct `Chap26::ETSPMtEph::ETSPMtEph::Point`
            found type parameter `Self`
note: function defined here
   --> src/Chap26/ETSPMtEph.rs:83:22
    |
 83 |     pub open spec fn spec_point_distance(a: Point, b: Point) -> f64 {
    |                      ^^^^^^^^^^^^^^^^^^^ --------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
Elapsed: 3s
Sampled Memory Usage: peak rust_verify RSS: 341MB, peak z3 RSS: 0MB, min free: 22546MB
Sampled CPU Usage: rust_verify: 1s, z3 children: 0s
